--- a/ethionetflix_app/pubspec.yaml
+++ b/ethionetflix_app/pubspec.yaml
@@ -44,12 +44,12 @@ dependencies:
   # For parsing JSON data into Dart objects easily (code generation)
   json_annotation: ^4.8.1
   video_player: ^2.7.2
+  chewie: ^1.7.1
   cached_network_image: ^3.3.0
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   dio: ^5.3.3
   flutter_dotenv: ^5.1.0
-  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -86,14 +86,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
-        - asset: assets/fonts/Roboto-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Roboto-Bold.ttf
-          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
