--- a/ethionetflix_app_new/.env
+++ b/ethionetflix_app_new/.env
@@ -1,5 +1,5 @@
-API_BASE_URL=https://ethionetflix.hopto.org
-WS_BASE_URL=wss://ethionetflix.hopto.org
+API_BASE_URL=https://ethionetflix1.hopto.org
+WS_BASE_URL=wss://ethionetflix1.hopto.org
 
 # Chapa API Configuration
 CHAPA_PUBLIC_KEY=CHAPUBK_TEST-7T1WmPB1ay0XTyn0fsYFcx5RWkFwB8QI
