--- a/ethionetflix_app_new/pubspec.yaml
+++ b/ethionetflix_app_new/pubspec.yaml
@@ -14,7 +14,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
+# In Windows, build
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
@@ -32,8 +32,7 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # Use with the CupertinoIcons class for iOS style icons.  cupertino_icons: ^1.0.2
 
   # For WebSocket communication
   web_socket_channel: ^2.4.0
@@ -46,13 +45,16 @@ dependencies:
   video_player: ^2.7.2
   chewie: ^1.7.1
   cached_network_image: ^3.3.0
-  path_provider: ^2.1.2
-  permission_handler: ^11.2.0
+  # Modern download implementation
   dio: ^5.4.0
+  flutter_file_dialog: ^3.0.1
+  path_provider: ^2.0.15
   flutter_dotenv: ^5.1.0
   device_info_plus: ^9.1.2
   flutter_local_notifications: ^17.1.2
   webview_flutter: ^4.4.2
+  flutter_vlc_player: ^7.4.0
+  permission_handler: ^11.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -71,13 +73,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+  #
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
